# swagger_server/controllers/plants_controller.py
@@ -1,5 +1,6 @@
 from swagger_server import util
 from flask import abort
+import requests
 
 
 def get_plant(plant_id):  # noqa: E501
@@ -38,3 +39,18 @@ def get_plants():  # noqa: E501
         del p['_id']
         res.append(p)
     return res
+
+
+def update_sensing_time(microbit_id, sensor_name, sensing_time):
+
+    plant = util.get_collection('plants').find_one({'microbit':microbit_id})
+
+    if plant is None:
+        abort(404)
+
+    sink_address = plant['network']
+
+    resp = requests.put(sink_address+'/sensing/{microbit_id}/{sensor_name}/time'.format(microbit_id, sensor_name),
+                        params={'sampling_rate': sensing_time})
+
+    return resp.status_code
